force-app/main/default/objects/Audit_Agenda_Item__c/Audit_Agenda_Item__c.object-meta.xml
<CustomObject>
    <label>Audit Agenda Item</label>
    <nameField>
        <label>Timeslot</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Audit Agenda Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>