force-app/main/default/objects/Audit_Agenda_Item__c/fields/Audit__c.field-meta.xml
<CustomField>
    <fullName>Audit__c</fullName>
    <label>Audit #</label>
    <referenceTo>BMX_Quality_Audit__c</referenceTo>
    <relationshipLabel>Audit Agenda Items</relationshipLabel>
    <relationshipName>Audit_Agenda_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>