force-app/main/default/objects/Audit_Agenda_Item__c/fields/Audited_Subjects__c.field-meta.xml
<CustomField>
    <fullName>Audited_Subjects__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Audited Subject(s)</label>
    <referenceTo>Topic__c</referenceTo>
    <relationshipLabel>Audit Agenda Items</relationshipLabel>
    <relationshipName>Audit_Agenda_Items</relationshipName>
    <type>Lookup</type>
</CustomField>