force-app/main/default/objects/Audit_Agenda_Item__c/fields/Chapter__c.field-meta.xml
<CustomField>
    <fullName>Chapter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chapter</label>
    <referenceTo>Chapter_to_Agenda__c</referenceTo>
    <relationshipLabel>Audit Agenda Items</relationshipLabel>
    <relationshipName>Audit_Agenda_Items</relationshipName>
    <type>Lookup</type>
</CustomField>