force-app/main/default/objects/Audit_Agenda_Item__c/fields/Individuals__c.field-meta.xml
<CustomField>
    <fullName>Individuals__c</fullName>
    <label>Individual(s)</label>
    <type>TextArea</type>
</CustomField>