force-app/main/default/objects/Audit_Agenda_Item__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <formula>Chapter__r.Chapter__r.Source__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source</label>
    <type>Text</type>
</CustomField>